--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@
 
 /* Navigation bar */
 body {
-    font-family: Arial, sans-serif;
+    font-family: Georgia, 'Times New Roman', Times, serif, sans-serif;
     margin: 0;
     padding: 0;
 }
@@ -61,6 +61,7 @@ ul {
 li {
     float: left;
     justify-content: center;
+    
 }
 
 a {
