--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,8 @@
 }
 
 /* Header image */
-.header-image {
+#home {
+
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/header-pic.jpg);
     height: 200px;
 
@@ -19,22 +20,21 @@
     position: relative;
 }
 
-/* Place header text center of the image */
-.header-text {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+/* Header font */
+header h1 {
+    font-family: 'Style script';
+    font-size: 40px;
     color: white;
-    font-family: 'Style Script', cursive;
-    font-size: 15px;
 }
 
-.header-text div {
+/* Place header text center of the image */
+.text-center {
+    text-align: center;
+}
+
+.vertical-center {
     position: relative;
-    width: 80%;
-    height: 80%;
+    top: 20%;
 }
 
 /* Navigation bar */
@@ -44,7 +44,7 @@ body {
     padding: 0;
 }
 
-nav {
+#navbar {
     background-color: black;
     overflow: hidden;
     display: flex;
