--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,6 @@ header h1 {
     color: white;
 }
 
-/* Place header text center of the image */
 .text-center {
     text-align: center;
 }
@@ -37,46 +36,31 @@ header h1 {
     top: 20%;
 }
 
-/* Navigation bar */
-body {
-    font-family: Georgia, 'Times New Roman', Times, serif, sans-serif;
-    margin: 0;
-    padding: 0;
-}
-
-#navbar {
-    background-color: black;
-    overflow: hidden;
+.flexbox {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 }
-
-ul {
-    list-style-type: none;
-    margin: 0;
+/* Navigation bar */
+nav {
     padding: 0;
-    overflow: hidden;
+    width: 100%;
 }
 
-li {
-    float: left;
-    justify-content: center;
-    
-}
-
-a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
+nav > a {
     text-decoration: none;
+    color: beige;
+    font-size: larger;
+    margin: 5px 5px;
 }
 
-a:hover {
-    background-color: #ddd;
-    color: black;
+nav > a:hover {
+    color: rgba(255, 206, 115, 0.75);
 }
 
-.active {
-    background-color: #f6c604;
+.black-background {
+    background-color: black;
+}
+
+.text-uppercase {
+    text-transform: uppercase;
 }
