--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,3 +64,29 @@ nav > a:hover {
 .text-uppercase {
     text-transform: uppercase;
 }
+
+/* Footer */
+footer {
+    background-color: #000000;
+    padding: 1px;
+    text-align: center;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    z-index: 3;
+}
+
+#social-networks {
+    text-align: center;
+    padding: 10px 0;
+    display: flex;
+    justify-content: space-evenly;
+    list-style-type: none;
+}
+
+#social-networks i {
+    font-size: 160%;
+    padding: 5%;
+    color: white;
+}
